--- a/custom_components/openai_tts/translations/el.json
+++ b/custom_components/openai_tts/translations/el.json
@@ -2,31 +2,107 @@
   "config": {
     "step": {
       "user": {
-        "title": "Προσθήκη μετατροπής κειμένου σε ομιλία",
-        "description": "Δείτε την τεκμηρίωση για περαιτέρω πληροφορίες.",
+        "title": "Προσθήκη υπηρεσίας OpenAI TTS",
+        "description": "Ρυθμίστε την ενσωμάτωση OpenAI TTS για να δημιουργήσετε πράκτορες TTS.",
         "data": {
-          "api_key": "Εισάγετε το API key του OpenAI",
-          "speed": "Ταχύτητα (0.25 έως 4.0, όπου το 1.0 είναι προεπιλογή)",
-          "model": "Μοντέλο",
-          "voice": "Φωνή",
-          "url": "Εισάγετε ένα endpoint συμβατό με OpenAI (προαιρετικά συμπεριλάβετε αριθμό θύρας)."
+          "api_key": "Κλειδί API",
+          "url": "Διεύθυνση API (προαιρετικό)"
+        }
+      },
+      "reconfigure": {
+        "title": "Επαναρύθμιση OpenAI TTS",
+        "description": "Ενημερώστε τα διαπιστευτήρια API για αυτήν την ενσωμάτωση.",
+        "data": {
+          "api_key": "Κλειδί API",
+          "url": "Διεύθυνση API"
+        }
+      },
+      "reauth_confirm": {
+        "title": "Επαναπιστοποίηση OpenAI TTS",
+        "description": "Το κλειδί API για {title} δεν είναι πλέον έγκυρο. Παρακαλώ εισάγετε ένα νέο κλειδί API.",
+        "data": {
+          "api_key": "Κλειδί API"
         }
       }
     },
+    "abort": {
+      "already_configured": "Αυτή η παρουσία είναι ήδη ρυθμισμένη",
+      "reconfigure_successful": "Η ρύθμιση ενημερώθηκε επιτυχώς",
+      "reauth_successful": "Η επαναπιστοποίηση ολοκληρώθηκε επιτυχώς"
+    },
     "error": {
-      "wrong_api_key": "Μη έγκυρο API key. Εισάγετε ένα έγκυρο API key."
+      "wrong_api_key": "Μη έγκυρο κλειδί API. Παρακαλώ εισάγετε ένα έγκυρο κλειδί API.",
+      "invalid_api_key": "Μη έγκυρο κλειδί API. Παρακαλώ ελέγξτε το κλειδί API σας και δοκιμάστε ξανά.",
+      "cannot_connect": "Δεν είναι δυνατή η σύνδεση στο OpenAI API. Παρακαλώ ελέγξτε το δίκτυό σας και τη διεύθυνση API.",
+      "duplicate_api_key": "Υπάρχει ήδη καταχώρηση με αυτό το κλειδί API. Κάθε καταχώρηση ενσωμάτωσης πρέπει να έχει μοναδικό κλειδί API."
+    }
+  },
+  "config_subentries": {
+    "profile": {
+      "entry_type": "Πράκτορας TTS",
+      "initiate_flow": {
+        "user": "Προσθήκη πράκτορα TTS",
+        "reconfigure": "Επαναρύθμιση πράκτορα TTS"
+      },
+      "step": {
+        "user": {
+          "title": "Προσθήκη Πράκτορα TTS",
+          "description": "Δημιουργήστε έναν νέο πράκτορα TTS με προσαρμοσμένες ρυθμίσεις φωνής",
+          "data": {
+            "profile_name": "Όνομα προφίλ",
+            "model": "Μοντέλο",
+            "voice": "Φωνή",
+            "speed": "Ταχύτητα (0,25 έως 4,0)",
+            "chime": "Ενεργοποίηση ηχητικού σήματος",
+            "chime_sound": "Ήχος σήματος",
+            "normalize_audio": "Κανονικοποίηση έντασης ήχου",
+            "instructions": "Προσαρμοσμένες οδηγίες (προαιρετικό, μόνο για υποστηριζόμενα μοντέλα)"
+          }
+        },
+        "reconfigure": {
+          "title": "Ενημέρωση Πράκτορα TTS",
+          "description": "Τροποποιήστε τις ρυθμίσεις αυτού του πράκτορα TTS",
+          "data": {
+            "model": "Μοντέλο",
+            "voice": "Φωνή",
+            "speed": "Ταχύτητα (0,25 έως 4,0)",
+            "chime": "Ενεργοποίηση ηχητικού σήματος",
+            "chime_sound": "Ήχος σήματος",
+            "normalize_audio": "Κανονικοποίηση έντασης ήχου",
+            "instructions": "Προσαρμοσμένες οδηγίες (προαιρετικό, μόνο για υποστηριζόμενα μοντέλα)"
+          }
+        }
+      },
+      "error": {
+        "already_exists": "Υπάρχει ήδη προφίλ με αυτό το όνομα"
+      },
+      "abort": {
+        "already_configured": "Το προφίλ είναι ήδη ρυθμισμένο",
+        "reconfigure_successful": "Ο πράκτορας TTS επαναρυθμίστηκε επιτυχώς",
+        "subentry_not_found": "Ο πράκτορας TTS δεν βρέθηκε"
+      }
     }
   },
   "options": {
+    "abort": {
+      "no_options_available": "Αυτή η καταχώρηση ενσωμάτωσης δεν έχει ρυθμιζόμενες επιλογές. Χρησιμοποιήστε τις υποκαταχωρήσεις για να ρυθμίσετε μεμονωμένους πράκτορες TTS.",
+      "not_supported": "Η ροή επιλογών δεν υποστηρίζεται για αυτήν την καταχώρηση"
+    },
     "step": {
       "init": {
-        "title": "Διαμορφώστε τις επιλογές TTS",
+        "title": "Ρύθμιση επιλογών TTS",
+        "description": "Ρυθμίστε τις επιλογές για αυτό το προφίλ TTS",
         "data": {
-          "chime": "Ενεργοποιήστε τον ήχο του ηχητικού σήματος πριν από την ομιλία (χρήσιμο για ανακοινώσεις)",
-          "chime_sound": "Ήχος ηχητικού σήματος",
-          "speed": "Ταχύτητα (0.25 έως 4.0)",
+          "chime": "Ενεργοποίηση ηχητικού σήματος πριν την ομιλία (χρήσιμο για ανακοινώσεις)",
+          "chime_sound": "Ήχος σήματος",
+          "speed": "Ταχύτητα (0,25 έως 4,0)",
+          "model": "Μοντέλο",
           "voice": "Φωνή",
-          "normalize_audio": "Ενεργοποιήστε την αύξηση της έντασης για τον παραγόμενο ήχο (χρησιμοποιεί περισσότερη CPU)"
+          "enable_instructions": "Ενεργοποίηση προσαρμοσμένων οδηγιών",
+          "instructions": "Οδηγίες (αφήστε κενό για απενεργοποίηση)",
+          "normalize_audio": "Ενεργοποίηση ενίσχυσης έντασης για τον παραγόμενο ήχο (απαιτεί περισσότερη επεξεργαστική ισχύ)",
+          "volume_restore": "Επαναφορά έντασης ηχείων μετά την αναπαραγωγή TTS",
+          "pause_playback": "Παύση πολυμέσων κατά τη διάρκεια TTS (μόνο Sonos)"
         }
       }
     }
