--- a/custom_components/dreame_vacuum/translations/en.json
+++ b/custom_components/dreame_vacuum/translations/en.json
@@ -66,6 +66,14 @@
         },
         "description": "Log in to the Movahome cloud."
       },
+      "trouver": {
+        "data": {
+          "username": "Username",
+          "password": "Password",
+          "country": "Server country"
+        },
+        "description": "Log in to the Trouver cloud."
+      },
       "devices": {
         "data": {
           "devices": "Supported Devices"
@@ -84,7 +92,7 @@
           "color_scheme": "Map color scheme",
           "icon_set": "Map icon set",
           "notify": "Notification",
-          "hidden_map_objects": "Map objects",
+          "hidden_map_objects": "Hidden Map objects",
           "low_resolution": "Low resolution map",
           "square": "Square map"
         }
@@ -102,7 +110,7 @@
           "color_scheme": "Map color scheme",
           "icon_set": "Map icon set",
           "notify": "Notification",
-          "hidden_map_objects": "Map objects",
+          "hidden_map_objects": "Hidden Map objects",
           "low_resolution": "Low resolution map",
           "square": "Square map",
           "configuration_type": "Configuration type",
@@ -205,7 +213,10 @@
         "state": {
           "none": "None",
           "tile": "Floor tile",
-          "wood": "Wood floor"
+          "wood": "Wood floor",
+          "low_pile_carpet": "Low pile carpet",
+          "medium_pile_carpet": "Medium pile carpet",
+          "carpet": "Carpet"
         }
       },
       "voice_assistant_language": {
@@ -350,9 +361,20 @@
           "returning_to_drain": "Returning to drain",
           "draining": "Draining",
           "auto_water_draining": "Auto water draining",
+          "emptying": "Emptying",
+          "dust_bag_drying": "Dust bag drying",
+          "dust_bag_drying_paused": "Dust bag drying paused",
+          "heading_to_extra_cleaning": "Heading to extra cleaning",
+          "extra_cleaning": "Extra cleaning",
+          "finding_pet_paused": "Finding pet paused",
+          "finding_pet": "Finding pet",
           "shortcut": "Shortcut",
           "monitoring": "Monitoring",
-          "monitoring_paused": "Monitoring paused"
+          "monitoring_paused": "Monitoring paused",
+          "initial_deep_cleaning": "Initial deep cleaning",
+          "initial_deep_cleaning_paused": "Initial deep cleaning paused",
+          "sanitizing": "Sanitizing",
+          "sanitizing_with_dry": "Sanitizing with dry"
         }
       },
       "status": {
@@ -669,7 +691,15 @@
           "water_stain": "Water stain cleaning",
           "water_stain_paused": "Water stain cleaning paused",
           "boosted_edge_cleaning": "Boosted edge cleaning",
-          "hair_compressing": "Hair compressing"
+          "hair_compressing": "Hair compressing",
+          "large_particle_cleaning": "Large particle cleaning",
+          "intensive_stain_cleaning": "Intensive stain cleaning",
+          "stain_cleaning": "Stain cleaning",
+          "initial_deep_cleaning": "Initial deep cleaning",
+          "initial_deep_cleaning_paused": "Initial deep cleaning paused",
+          "mop_pad_heating": "Mop pad heating",
+          "cleaning_after_mapping": "Cleaning after mapping",
+          "small_particle_cleaning": "Small particle cleaning"
         }
       }
     }
@@ -1007,7 +1037,7 @@
           "name": "Carpet Cleaning",
           "description": "Custom carpet cleaning setting for each carpet."
         },
-        "carpet_settings": {
+        "carpet_preferences": {
           "name": "Carpet Settings",
           "description": "Custom carpet settings setting for each carpet with an array of enabled settings."
         }
@@ -1063,7 +1093,7 @@
           "name": "Carpets",
           "description": "Carpet areas."
         },
-        "ignored_carpets": {
+        "deleted_carpets": {
           "name": "Ignored Carpets",
           "description": "Ignored carpet areas for deleting the automatically detected carpets."
         }
