--- a/custom_components/dreame_vacuum/translations/nl.json
+++ b/custom_components/dreame_vacuum/translations/nl.json
@@ -66,6 +66,14 @@
         },
         "description": "Log in op de Movahome cloud."
       },
+      "trouver": {
+        "data": {
+          "username": "Gebruikersnaam",
+          "password": "Wachtwoord",
+          "country": "Serverland"
+        },
+        "description": "Log in op de Trouver cloud."
+      },
       "devices": {
         "data": {
           "devices": "Ondersteunde Apparaten"
@@ -141,10 +149,10 @@
       },
       "cleaning_mode": {
         "state": {
-          "sweeping": "Vegen",
+          "sweeping": "Stofzuigen",
           "mopping": "Dweilen",
-          "sweeping_and_mopping": "Vegen en dweilen",
-          "mopping_after_sweeping": "Dweilen na vegen"
+          "sweeping_and_mopping": "Stofzuigen en dweilen",
+          "mopping_after_sweeping": "Dweilen na stofzuigen"
         }
       },
       "carpet_sensitivity": {
@@ -205,7 +213,10 @@
         "state": {
           "none": "Geen",
           "tile": "Vloertegel",
-          "wood": "Houten vloer"
+          "wood": "Houten vloer",
+          "low_pile_carpet": "Laagpolig tapijt",
+          "medium_pile_carpet": "Middelhoogpolig tapijt",
+          "carpet": "Tapijt"
         }
       },
       "voice_assistant_language": {
@@ -317,7 +328,7 @@
       "state": {
         "state": {
           "unknown": "Onbekend",
-          "sweeping": "Vegen",
+          "sweeping": "Stofzuigen",
           "charging": "Opladen",
           "error": "Fout",
           "idle": "Inactief",
@@ -328,7 +339,7 @@
           "washing": "Wassen",
           "returning_to_wash": "Terugkeren om te wassen",
           "building": "Bouwen",
-          "sweeping_and_mopping": "Vegen en dweilen",
+          "sweeping_and_mopping": "Stofzuigen en dweilen",
           "charging_completed": "Opladen voltooid",
           "upgrading": "Upgraden",
           "clean_summon": "Oproepen om schoon te maken",
@@ -350,12 +361,20 @@
           "returning_to_drain": "Terugkeren om te legen",
           "draining": "Legen",
           "auto_water_draining": "Automatisch water legen",
-          "shortcut_task": "Snelkoppelingstaak",
-          "streaming": "Streamen",
-          "streaming_paused": "Streamen gepauzeerd",
+          "emptying": "Leegmaken",
+          "dust_bag_drying": "Stofzak drogen",
+          "dust_bag_drying_paused": "Drogen stofzak gepauzeerd",
+          "heading_to_extra_cleaning": "Op weg naar extra reiniging",
+          "extra_cleaning": "Extra reiniging",
+          "finding_pet_paused": "Huisdier zoeken gepauzeerd",
+          "finding_pet": "Huisdier zoeken",
           "shortcut": "Snelkoppeling",
           "monitoring": "Monitoren",
-          "monitoring_paused": "Monitoren gepauzeerd"
+          "monitoring_paused": "Monitoren gepauzeerd",
+          "initial_deep_cleaning": "Initiële diepe reiniging",
+          "initial_deep_cleaning_paused": "Initiële diepe reiniging gepauzeerd",
+          "sanitizing": "Desinfecteren",
+          "sanitizing_with_dry": "Desinfecteren met drogen"
         }
       },
       "status": {
@@ -672,7 +691,15 @@
           "water_stain": "Water vlek schoonmaak",
           "water_stain_paused": "Water vlek schoonmaak gepauzeerd",
           "boosted_edge_cleaning": "Boosted randreiniging",
-          "hair_compressing": "Haar comprimeren"
+          "hair_compressing": "Haar comprimeren",
+          "large_particle_cleaning": "Reiniging grote deeltjes",
+          "intensive_stain_cleaning": "Intensieve vlekkenreiniging",
+          "stain_cleaning": "Vlekkenreiniging",
+          "initial_deep_cleaning": "Initiële diepe reiniging",
+          "initial_deep_cleaning_paused": "Initiële diepe reiniging gepauzeerd",
+          "mop_pad_heating": "Mop‑pad verwarming",
+          "cleaning_after_mapping": "Reiniging na mapping",
+          "small_particle_cleaning": "Reiniging kleine deeltjes"
         }
       }
     }
@@ -1006,7 +1033,7 @@
           "name": "Tapijtreiniging",
           "description": "Aangepaste tapijtreinigingsinstelling voor elk tapijt."
         },
-        "carpet_settings": {
+        "carpet_preferences": {
           "name": "Tapijtinstellingen",
           "description": "Aangepaste tapijtinstellingen voor elk tapijt met een array van ingeschakelde instellingen."
         }
@@ -1062,7 +1089,7 @@
           "name": "Tapijten",
           "description": "Tapijtgebieden."
         },
-        "ignored_carpets": {
+        "deleted_carpets": {
           "name": "Genegeerde Tapijten",
           "description": "Genegeerde tapijtgebieden om automatisch gedetecteerde tapijten te verwijderen."
         }
